[package]
name = "billy"
version = "0.1.0"
edition = "2021"
description = "Billy: Your Bitcoin Node Assistant"

[dependencies]
bitcoincore-rpc = "0.17.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0" 
serde_json = "1.0.133"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
